nit: add jvm argument --enable-native-access=ALL-UNNAMED to silence native access warn